<?xml version="1.0" encoding="utf-8"?>

<!--
   Firefox Bookmarks Importer for Tint Browser
  
   Copyright (C) 2012 - to infinity and beyond J. Devauchelle and contributors.
 
   This program is free software; you can redistribute it and/or
   modify it under the terms of the GNU General Public License
   version 3 as published by the Free Software Foundation.
 
   This program is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.
 -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/PreferenceCategoryCredentials" >
        <EditTextPreference
            android:defaultValue=""
            android:key="PREFERENCE_USERNAME"
            android:summary="@string/PreferenceCredentialsUserNameSummary"
            android:title="@string/PreferenceCredentialsUserNameTitle" />
        <EditTextPreference
            android:defaultValue=""
            android:key="PREFERENCE_PASSWORD"
            android:password="true"
            android:summary="@string/PreferenceCredentialsPasswordSummary"
            android:title="@string/PreferenceCredentialsPasswordTitle" />
        <EditTextPreference
            android:defaultValue=""
            android:key="PREFERENCE_KEY"
            android:summary="@string/PreferenceCredentialsKeySummary"
            android:title="@string/PreferenceCredentialsKeyTitle" />
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/PreferenceCategoryServer" >
        <org.tint.firefoximporter.ui.preferences.ServerSpinnerPreference
            android:defaultValue="https://auth.services.mozilla.com/"
            android:key="PREFERENCE_SERVER"
            android:summary="@string/PreferenceCredentialsServerSummary"
            android:title="@string/PreferenceCredentialsServerTitle" />
    </PreferenceCategory>

</PreferenceScreen>