<?xml version="1.0" encoding="utf-8"?>

<!--
   Firefox Bookmarks Importer for Tint Browser
  
   Copyright (C) 2012 - to infinity and beyond J. Devauchelle and contributors.
 
   This program is free software; you can redistribute it and/or
   modify it under the terms of the GNU General Public License
   version 3 as published by the Free Software Foundation.
 
   This program is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.
 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:padding="10dip"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:text="@string/ErrorDetailsActivityMessage" />

        <TextView
            android:id="@+id/ErrorDetailsActivityDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dip"
            android:text="@+id/ErrorDetailsActivityDetails" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">
        
        <Button android:id="@+id/ErrorDetailsActivitySettings"
            android:text="@string/ErrorDetailsActivitySettings"
            android:layout_width="0dip"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:maxLines="2"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle" />
       
        <Button android:id="@+id/ErrorDetailsActivityClose"
            android:text="@string/ErrorDetailsActivityClose"
            android:layout_width="0dip"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:maxLines="2"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    

</LinearLayout>